--- a/main.py.template
+++ b/main.py.template
@@ -13,13 +13,13 @@ logging.basicConfig(level=logging.INFO)
 HazelcastCloudDiscovery._CLOUD_URL_BASE = "{{ .CloudUrl}}"
 client = hazelcast.HazelcastClient(
     cluster_name="{{ .ClusterName}}",
-    cloud_discovery_token="{{ .DiscoveryToken}}",
+    cloud_discovery_token="{{ .ClusterDiscoveryToken}}",
     statistics_enabled=True,
     ssl_enabled=True,
-    ssl_cafile=os.path.abspath("{{ .CaPath}}"),
-    ssl_certfile=os.path.abspath("{{ .CertPath}}"),
-    ssl_keyfile=os.path.abspath("{{ .KeyPath}}"),
-    ssl_password="{{ .KeyPassword}}",
+    ssl_cafile=os.path.abspath("{{ .SslCaPath}}"),
+    ssl_certfile=os.path.abspath("{{ .SslCertPath}}"),
+    ssl_keyfile=os.path.abspath("{{ .SslKeyPath}}"),
+    ssl_password="{{ .SslKeyPassword}}",
 )
 my_map = client.get_map("{{ .MapName}}").blocking()
 my_map.add_entry_listener(True, added_func=entry_added)
